# IA_Petrovichi

./: README.md
BTs_Tutorials/: CMakeLists.txt
BTs_Tutorials/include/: dummy_nodes.h
BTs_Tutorials/src/: tutorial01.cpp  tutorial02.cpp  tutorial03.cpp
BTs_Tutorials/trees/: tutorial01_tree.xml  tutorial02_tree.xml
